# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2012-06-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix/Improvements for AWS deployment

2012-05-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Updated FAQ
    * Add the virtual host option ("use_host_prefix") to cloudi_job_http

2012-05-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update uuid, so that newer MAC addresses are not an issue

2012-04-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix a few unsigned constants in the C/C++ CloudI API and the msg_size test
    * Get CloudI building with Travis (http://travis-ci.org/#!/okeuday/CloudI)

2012-04-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.2.0rc2 (beta) released
    * Fix bug with erlang CloudI API forward operations
    * Improve ruby erlang binary term format encoding, string concatenation

2012-04-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Prevent cloudi_logger from having problems with erroneous argument lists
      and excessive data within an argument list
    * Complete erlang version of the messaging test
    * Fix erlang CloudI API operations within the cloudi_job_handle_request/11
      function that exclude the Job pid from service name lookup results

2012-04-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add erlang version of the messaging test
    * Fix cloudi_job_init/3 synchronous usage of Dispatcher with the cloudi_job
      functions (i.e., the Erlang CloudI API)

2012-04-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add java version of the messaging test
    * Fix java CloudI API isTimeout functions

2012-04-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add ways to avoid std::string creation within the C++ CloudI API
    * Fix a bug within the C/C++ CloudI API (buffer overwrite)

2012-03-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add c++ version of the messaging test